--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
 <body>
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-xs-12 col-md-8">.col-xs-12 .col-md-8</div>
-			<div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+			<div class="col-xs-12 col-md-8">
+				<label for="name">申请人:</label><input id="name" type="text">
+
+			</div>
+			<div class="col-xs-12 col-md-4">
+				<label for="mobile">手机号码</label><input id="mobile" type="text">
+			</div>
+			<div class="col-xs-12 col-md-4">
+				<button type="button">申请</button>
+			</div>
 		</div>
 
 		<!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
